fix text animation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="animation-container">
         <img src="images/1_Main Page left.jpg" class="animate__animated animate__fadeInLeft" alt="Left Side image" id="leftImage">
         <img src="images/1_Main Page right.jpg" class="animate__animated animate__fadeInRight" alt="Right Side image" id="rightImage">
-        <img src="images/1_Main Page text.png" class="animate__animated animate__bounceInDown" alt="Text image" id="textImage">
+        <img src="images/1_Main Page text.png" class="animate__animated animate__zoomIn" alt="Text image" id="textImage">
     </div>
 </body>
 </html>
